# resume-match-main

./: Dockerfile  README.md  app.py  app_logs.txt  baseline_agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_model.py
app/analysis/: feedback.py
app/api/: main.py
app/env/: environment.py  models.py  reward.py
app/matching/: matcher.py  similarity.py
data/: create_pairs_from_resume_dataset.py  generate_data.py  generate_ground_truth.py  ground_truth.json  jobs.json  preprocess.py  resumes.json
server/: app.py
tests/: test_env.py
