[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-arena"
version = "1.0.0"
description = "AI environment for real-world Job-Resume matching and candidate ranking."
authors = [
    { name = "HR AI Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "sentence-transformers==2.7.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "numpy==1.26.4",
    "scikit-learn==1.3.0",
    "scipy==1.13.1",
    "openai==1.35.3",
    "gradio==4.38.1",
    "pytest==8.2.2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
